tests/ui/c-variadic/variadic-ffi-no-fixed-args.rs
extern "C" {
    fn foo(...);
//~^ ERROR C-variadic function must be declared with at least one named argument
}

fn main() {}
